--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
     - 3.6
 
 install:
-    - pip install pipenv -i https://mirrors.aliyun.com/pypi/
+    - pip install pipenv -i https://mirrors.aliyun.com/pypi/simple/ 
     - pipenv install -d
 
 script:
