--- a/Pipfile
+++ b/Pipfile
@@ -1,6 +1,6 @@
 [[source]]
 
-url = "https://mirrors.aliyun.com/pypi/"
+url = "https://mirrors.aliyun.com/pypi/simple/"
 verify_ssl = true
 name = "pypi"
 
