--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ deploy:
     provider: releases
     api_key:
         secure: ${GITHUB_TOKEN}
-    file: dist/aiosqlite3-*-py3-none-any.whl
+    file: dist/*.whl
+    file_glob: true
     skip_cleanup: true
     on:
         tags: true
